# workforce

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  LICENSE  README.md  WORKFORCE_BRIEF.md  action.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml  workforce-example.yml
docs/: ci-guide.md  events-schema.md  github-actions.md  github-app-design.md  homebrew-tap.md  mcp-server.md  specialist-registry.md  webhook.md  workforce-md.md
scripts/: sdk_smoke.py
src/workforce/: __init__.py  __main__.py  budget.py  cli.py  cli_mission.py  cli_panels.py  cli_project.py  cli_roster.py  config.py  doctor.py  github.py  globmatch.py  manage.py  manager.py  mission.py  output.py  parallel.py  paths.py  permissions.py  project.py  reviewer.py  runner.py  specialist.py  stacks.py  stats.py  terminal.py  ticket_templates.py  utils.py  version.py  worktree.py
src/workforce/cli/: __init__.py  _clipboard.py  _common.py  _completions.py  cleanup.py  config.py  dispatch.py  init.py  manage.py  marketplace.py  mcp.py  memory.py  merge.py  mission.py  panels.py  project.py  roster.py  serve.py  stats.py  ticket.py  webhook.py
src/workforce/mcp/: server.py  tools.py
src/workforce/web/: app.py  serve.py
src/workforce/web/templates/: base.html  mission_detail.html  mission_diff.html  missions.html  roster.html  stats.html
src/workforce/webhook/: config.py  handlers.py  server.py  verify.py
tests/: test_budget.py  test_cli_dispatch.py  test_cli_memory.py  test_cli_mission.py  test_cli_panels.py  test_cli_project.py  test_clipboard.py  test_completions.py  test_config.py  test_doctor.py  test_github.py  test_globmatch.py  test_init.py  test_manage.py  test_manager.py  test_marketplace.py  test_mcp.py  test_mission.py  test_parallel.py  test_paths.py  test_permissions.py  test_project.py  test_reviewer.py  test_runner.py  test_specialist.py  test_stats.py  test_terminal.py  test_ticket.py  test_utils.py  test_web.py  test_webhook.py  test_worktree.py
